--- a/packages/catalog-model/examples/acme/team-a-group.yaml
+++ b/packages/catalog-model/examples/acme/team-a-group.yaml
@@ -58,3 +58,16 @@ spec:
     email: guest@example.com
     picture: https://avatars.dicebear.com/api/avataaars/guest@example.com.svg?background=%23fff
   memberOf: [team-a]
+  
+---
+apiVersion: backstage.io/v1alpha1
+kind: User
+metadata:
+  name: satya.praveen
+spec:
+  profile:
+    displayName: Satya Praveen
+    email: satya.praveen@groww.in
+    picture: https://avatars.dicebear.com/api/avataaars/nigel-manning@example.com.svg?background=%23fff
+  memberOf: [team-a]
+  
